# =============================================================================
# scripts/ci/gen-hooks/Cargo.toml — UFFS gate-manifest hook generator
# =============================================================================
#
# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2025-2026 SKY, LLC.
#
# Phase 2 of `docs/architecture/gates-manifest-plan.md`.  Reads the
# canonical `scripts/ci/gates.toml` manifest and emits the matching
# `scripts/hooks/_lint_pre_push.sh` so that the hook content is never
# hand-maintained.  Pre-commit (`_lint_fast.sh`) stays hand-written
# (Phase 3 picks it up).
#
# Lint policy: same as `scripts/ci-pipeline` — does NOT inherit
# `[lints] workspace = true`.  This is an internal tool; the production
# library lints (deny unwrap, deny println, deny missing_docs_in_private_items)
# fight readability for an operational binary.  Default clippy passes on
# this crate via the standard `cargo clippy` invocation.
# =============================================================================

[package]
name = "uffs-gen-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UFFS gate-manifest hook generator (Phase 2 of gates-manifest-plan); not published"
# Posture: **permanently non-publishable** — internal workspace CI tooling.
# Distinct from the 8 Polars-blocked deferred-publishable crates: this
# crate would remain non-publishable even if Polars upstream released,
# because it is internal CI orchestration, not a reusable library.
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3: docs.rs build configuration.
# This crate is `publish = false` (internal CI orchestration), so docs.rs will
# never build it; this block is preserved for workspace-uniform manifest shape
# (per Phase 1 follow-up F1.15 / issue #214).  Pure Rust CLI tooling — the
# docs.rs default (Linux x86_64) build is sufficient if it ever runs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "gen-hooks"
path = "src/main.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
# Every dependency is aliased to `[workspace.dependencies]` in the root
# Cargo.toml so a single Cargo.lock entry serves this tool and every other
# crate.  See `scripts/ci-pipeline/Cargo.toml` for the rationale.
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# ─────────────────────────────────────────────────────────────────────────────
# Lints policy
# ─────────────────────────────────────────────────────────────────────────────
# Inherit the full workspace lint stack (matches all 14 product crates).
#
# The previous wholesale opt-out (issue #212) was too coarse-grained:
# only 4 lints in `[workspace.lints.clippy]` are CLI-inappropriate
# (`print_stderr`, `print_stdout`, `indexing_slicing`, `min_ident_chars`,
# `std_instead_of_alloc`); the other ~60 deny-level lints (cast_lossless,
# redundant_clone, manual_memcpy, …) apply just as much to an operational
# CLI tool as to product code.  Per workspace rule 1 ("targeted allow,
# keep it minimal, scoped, justify in code comments"), intentional
# stderr-printing sites carry function-scoped
# `#[expect(clippy::print_stderr, reason = "…")]` rather than disabling
# the lint workspace-wide.  See `CLIPPY_POSTURE.md` § CLI-tooling.
[lints]
workspace = true
