# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2025-2026 SKY, LLC.
#
# UFFS — Gate-manifest workflow structural validator.
#
# Phase 3 deliverable from `docs/architecture/gates-manifest-plan.md`.
# Reads `scripts/ci/gates.toml` AND `.github/workflows/pr-fast.yml`,
# validates four structural properties (job presence, `if:` predicate
# alignment, aggregator coverage, branch-protection guard), exits
# non-zero on any drift.  This is a `--check`-only tool — it never
# mutates the workflow file.  See plan §4.2 for the full property
# specification and the rationale for the structural-validator design
# (vs. the originally-planned YAML emitter).

[package]
name = "uffs-gen-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gate-manifest workflow structural validator (gates-manifest-plan.md Phase 3)"
# Posture: **permanently non-publishable** — internal workspace CI tooling.
# Distinct from the 8 Polars-blocked deferred-publishable crates: this
# crate would remain non-publishable even if Polars upstream released,
# because it is internal CI orchestration, not a reusable library.
publish.workspace = true

[[bin]]
name = "gen-workflow"
path = "src/main.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
# Every dependency is aliased to `[workspace.dependencies]` in the root
# Cargo.toml so a single Cargo.lock entry serves this tool and every
# other crate.  See `scripts/ci/gen-hooks/Cargo.toml` for the rationale.
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# ─────────────────────────────────────────────────────────────────────────────
# Lints policy
# ─────────────────────────────────────────────────────────────────────────────
# This crate intentionally does NOT opt into `[lints] workspace = true`,
# matching the convention established by `scripts/ci-pipeline` and
# `scripts/ci/gen-hooks`.  The `[workspace.lints]` stack adds
# restriction-class lints (`print_stderr`, `min_ident_chars`,
# `indexing_slicing`, `std_instead_of_alloc`) that fight the ergonomics
# of an operational CLI tool that legitimately writes to stderr.
#
# The `just lint-prod` and `just lint-tests` recipes (which the
# pre-push hook and `pr-fast.yml::clippy` job both run) still apply
# the strict CLI flag stack — `pedantic`, `nursery`, `cargo`,
# `unwrap_used`, `expect_used`, `missing_docs_in_private_items`,
# `-D warnings` — and this crate passes them cleanly without any
# per-item suppressions.
