# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2025-2026 SKY, LLC.
#
# UFFS — Gate-manifest workflow structural validator.
#
# Phase 3 deliverable from `docs/architecture/gates-manifest-plan.md`.
# Reads `scripts/ci/gates.toml` AND `.github/workflows/pr-fast.yml`,
# validates four structural properties (job presence, `if:` predicate
# alignment, aggregator coverage, branch-protection guard), exits
# non-zero on any drift.  This is a `--check`-only tool — it never
# mutates the workflow file.  See plan §4.2 for the full property
# specification and the rationale for the structural-validator design
# (vs. the originally-planned YAML emitter).

[package]
name = "uffs-gen-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gate-manifest workflow structural validator (gates-manifest-plan.md Phase 3)"
# Posture: **permanently non-publishable** — internal workspace CI tooling.
# Distinct from the 8 Polars-blocked deferred-publishable crates: this
# crate would remain non-publishable even if Polars upstream released,
# because it is internal CI orchestration, not a reusable library.
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3: docs.rs build configuration.
# This crate is `publish = false` (internal CI orchestration), so docs.rs will
# never build it; this block is preserved for workspace-uniform manifest shape
# (per Phase 1 follow-up F1.15 / issue #214).  Pure Rust CLI tooling — the
# docs.rs default (Linux x86_64) build is sufficient if it ever runs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "gen-workflow"
path = "src/main.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
# Every dependency is aliased to `[workspace.dependencies]` in the root
# Cargo.toml so a single Cargo.lock entry serves this tool and every
# other crate.  See `scripts/ci/gen-hooks/Cargo.toml` for the rationale.
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# ─────────────────────────────────────────────────────────────────────────────
# Lints (issue #212)
# ─────────────────────────────────────────────────────────────────────────────
# Inherit the full workspace lint stack (matches all 14 product crates +
# uffs-diag).  The previous wholesale opt-out skipped ~60 high-value lints
# (cast_lossless, redundant_clone, manual_memcpy, …) along with the 4-5
# CLI-inappropriate ones it was meant to skip.  Per workspace rule 1
# ("targeted allow, keep minimal, scoped, justify in comments"), the
# CLI-inappropriate lints are suppressed via file-level `#![expect(...)]`
# blocks in `src/*.rs` with `reason = "..."` strings, matching the
# precedent in `crates/uffs-diag/src/bin/*.rs`.  See `CLIPPY_POSTURE.md`
# § CLI-tooling for the policy.
[lints]
workspace = true
