# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2025-2026 SKY, LLC.
#
# UFFS — Workspace manifest-inheritance drift detector.
#
# Phase 1 follow-up from
# `docs/dev/architecture/code_clean/phase_1_manifest_implementation_plan.md`
# (local-only).  The Phase 1 audit closed cleanly with zero CHORE
# findings against 15 manifest invariants; this crate encodes those
# invariants as machine-checkable assertions so any future regression
# (e.g. a contributor adding a new crate without `[lints] workspace =
# true`) surfaces at PR time instead of waiting on the annual re-audit
# cadence.  See issue #211 for the full motivation + acceptance
# criteria.
#
# Design follows the `gen-workflow` Phase-3 structural-validator
# pattern: read-only, `--check`-mode by default, exits non-zero on the
# first drift detected with a per-finding diagnostic message.  No
# `--write` mode — the tool can never break a manifest, only fail-loud
# when one drifts.

[package]
name = "uffs-manifest-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Workspace manifest-inheritance drift detector (phase-1 follow-up, issue #211)"
# Posture: **permanently non-publishable** — internal workspace CI tooling.
# Distinct from the 8 Polars-blocked deferred-publishable crates: this
# crate would remain non-publishable even if Polars upstream released,
# because it is internal CI orchestration tied to this workspace's
# manifest layout, not a reusable library.
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3: docs.rs build configuration.
# This crate is `publish = false` (internal CI orchestration), so docs.rs will
# never build it; this block is preserved for workspace-uniform manifest shape
# (per Phase 1 follow-up F1.15 / issue #214).  Pure Rust CLI tooling — the
# docs.rs default (Linux x86_64) build is sufficient if it ever runs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "manifest-audit"
path = "src/main.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
# Every dependency is aliased to `[workspace.dependencies]` in the root
# Cargo.toml so a single Cargo.lock entry serves this tool and every
# other crate.  See `scripts/ci/gen-hooks/Cargo.toml` for the rationale.
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# ─────────────────────────────────────────────────────────────────────────────
# Lints (issue #212)
# ─────────────────────────────────────────────────────────────────────────────
# Inherit the full workspace lint stack (matches all 14 product crates +
# uffs-diag).  CLI-inappropriate lints (`print_stderr` for the failure
# report) are suppressed at file scope via `#![expect(...)]` blocks in
# `src/main.rs` with `reason = "..."` strings, matching the precedent
# established for `gen-hooks` / `gen-workflow` in PR #228.  See
# `CLIPPY_POSTURE.md` § CLI-tooling for the policy.
[lints]
workspace = true
